# openbbox

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_ide_support.md
adapters/: base.py  claude_desktop_adapter.py  claudecode_adapter.py  codex_adapter.py  cursor_adapter.py  git_observer.py  kiro_adapter.py  pty_wrapper.py  registry.py  trae_adapter.py  vscode_adapter.py  windsurf_adapter.py
cli/: main.py
core/: diff_parser.py  exporter.py  matcher.py  models.py  storage.py
dashboard/: index.html
docs/: ARCHITECTURE.md  CNAME  PROTOCOL.md  index.html
protocol/: schema.json
server/: app.py
